login section is updated, user dashboard is completed. add money section design is completed

--- a/index.html
+++ b/index.html
@@ -25,22 +25,20 @@
     </style>
 </head>
 <body class="min-h-screen max-w-md bg-base-200 mx-auto">
-    <div class="logo w-[220px] mx-auto pt-[210px]">
+    <div class="logo w-[300px] mx-auto pt-[210px]">
         <img src="images/Logo-full.png" alt="">
     </div>
-    <div class="card bg-base-100 w-full max-w-[340px] shrink-0 shadow mt-[32px] mx-auto rounded-[24px]">
+    <div class="card bg-base-100 w-11/12 shrink-0 shadow mt-[32px] mx-auto rounded-[24px]">
       <div class="card-body">
         <fieldset class="fieldset">
           <label class="label font-medium text-[#080808] text[16px]">Mobile Number</label>
-          <input id="mobilenumber" type="text" class="input rounded-full" placeholder="Enter your number" maxlength="11" minlength="11" />
+          <input id="mobilenumber" type="text" class="input rounded-full w-full" placeholder="Enter your number" maxlength="11" minlength="11" />
           <label class="label font-medium text-[#080808] text[16px] mt-5">4 Digit Pin</label>
-          <input id="pin" type="password" class="input rounded-full" placeholder="Enter 4 Digit Pin" maxlength="4" minlength="4" />
+          <input id="pin" type="password" class="input rounded-full w-full" placeholder="Enter 4 Digit Pin" maxlength="4" minlength="4" />
           <button id="submitbtn" class="btn btn-primary mt-4 rounded-full">Login</button>
         </fieldset>
       </div>
     </div>
-  </div>
-</div>
 </body>
 <script src="/scripts/Login.js"></script>
 </html>
