--- a/homepage.html
+++ b/homepage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Payoo</title>
    <link rel="shortcut icon" href="/images/logo.png" type="image/x-icon">
     <!-- Tailwind and DaisyUI connection -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
@@ -36,11 +36,13 @@
             <a class="btn font-normal mb-[23px]" href="/index.html"><i class="fa-solid fa-arrow-right-from-bracket rotate-180"></i>Log Out</a>
         </div>
    </section>
-   <section class="headingscontent bg-white rounded-b-2xl">
+
+
+    <section class="headingscontent bg-white rounded-b-2xl">
    <div class="headingtext w-11/12 mx-auto pt-[32px] bg-white ">
     <h1 class="font-bold text-[24px] mb-4">Welcome to Pay<span class="text-primary">oo</span></h1>
    <p class="text-[16]/[26] font-normal text-neutral-500">Enjoy easy and convenient financial services with us. Cashout charge is low and </p>
-    </div>
+   </div>
     <div class="buttons mt-6 w-11/12 mx-auto grid grid-cols-3 gap-4 pb-[24px]">
         <button class="btn btn-soft btn-primary flex-col h-full py-5 text-[14px] font-normal"><img src="images/opt-1.png" alt="">Add money</button>
         <button class="btn btn-soft btn-primary flex-col h-full py-5 text-[14px] font-normal"><img src="images/opt-2.png" alt="">Cashout</button>
@@ -48,8 +50,37 @@
         <button class="btn btn-soft btn-primary flex-col h-full py-5 text-[14px] font-normal"><img src="images/opt-4.png" alt="">Get Bonus</button>
         <button class="btn btn-soft btn-primary flex-col h-full py-5 text-[14px] font-normal"><img src="images/opt-5.png" alt="">Pay Bill</button>
         <button class="btn btn-soft btn-primary flex-col h-full py-5 text-[14px] font-normal"><img src="images/opt-6.png" alt="">Transactions</button>
-    </div>
     </section>
+    
+    <section class="addmoney w-11/12 mx-auto mt-[15px] pb-[119px]">
+        <h3 class="font-bold">Add Money</h3>
+        <div class="card bg-base-100 w-full  shrink-0 shadow mt-4 mx-auto rounded-[24px]">
+      <div class="card-body">
+        <fieldset class="fieldset">
+            <label class="label font-medium text-[#080808] text[16px]">Select A Bank</label>
+            <select class="select w-full rounded-full">
+            <option disabled selected>Select A Bank</option>
+            <option><img class="w-10 h-10" src="images/dutch_bangla.png" alt=""> Dutch-Bangla Bank</option>
+            <option><img class="w-10 h-10" src="images/trust_Bank.png" alt="">Trust Bank</option>
+            <option><img class="w-10 h-10" src="images/pubali_bank.png" alt="">Pubali Bank</option>
+            <option> <img class="w-9 h-9" src="images/one_bank.png" alt="">One Bank</option>
+            <option><img class="w-10 h-10" src="images/prime_bank.png" alt="">Prime Bank</option>
+            <option><img class="w-10 h-10" src="images/islamic _bank.png" alt="">Islami Bank Bangladesh</option>
+</select>
+          <label class="label font-medium text-[#080808] text[16px] mt-5">Bank Account Number</label>
+          <input id="mobilenumber" type="text" class="input rounded-full w-full" placeholder="Enter 11 digit account number" maxlength="11" minlength="11" />
+          <label class="label font-medium text-[#080808] text[16px] mt-5">Amount to Add</label>
+          <input id="mobilenumber" type="text" class="input rounded-full w-full" placeholder="Add Amount to withdraw"/>
+          <label class="label font-medium text-[#080808] text[16px] mt-5">4 Digit Pin</label>
+          <input id="pin" type="password" class="input rounded-full w-full" placeholder="Enter 4 Digit Pin" maxlength="4" minlength="4" />
+          <button id="submitbtn" class="btn btn-primary mt-4 rounded-full">Login</button>
+        </fieldset>
+      </div>
+    </div>
+
+    </section>
+
+
 </body>
 
 </html>
