add money button is updated

--- a/homepage.html
+++ b/homepage.html
@@ -73,7 +73,7 @@
           <input id="amount" type="text" class="input rounded-full w-full" placeholder="Add Amount to add"/>
           <label class="label font-medium text-[#080808] text[16px] mt-5">4 Digit Pin</label>
           <input id="pin" type="password" class="input rounded-full w-full" placeholder="Enter 4 Digit Pin" maxlength="4" minlength="4" />
-          <button id="addmoneybtn" class="btn btn-primary mt-4 rounded-full">Login</button>
+          <button id="addmoneybtn" class="btn btn-primary mt-4 rounded-full">Add Money</button>
         </fieldset>
       </div>
     </div>
