--- a/homepage.html
+++ b/homepage.html
@@ -37,7 +37,6 @@
         </div>
    </section>
 
-
     <section class="headingscontent bg-white rounded-b-2xl">
    <div class="headingtext w-11/12 mx-auto pt-[32px] bg-white ">
     <h1 class="font-bold text-[24px] mb-4">Welcome to Pay<span class="text-primary">oo</span></h1>
@@ -52,7 +51,7 @@
         <button class="btn btn-soft btn-primary flex-col h-full py-5 text-[14px] font-normal"><img src="images/opt-6.png" alt="">Transactions</button>
     </section>
     
-    <section class="addmoney w-11/12 mx-auto mt-[15px] pb-[119px]">
+    <section class="addmoney w-11/12 mx-auto mt-[15px] pb-[119px] ">
         <h3 class="font-bold">Add Money</h3>
         <div class="card bg-base-100 w-full  shrink-0 shadow mt-4 mx-auto rounded-[24px]">
       <div class="card-body">
@@ -71,14 +70,32 @@
           <input id="acountnumber" type="text" class="input rounded-full w-full" placeholder="Enter 11 digit account number" maxlength="11" minlength="11" />
           <label class="label font-medium text-[#080808] text[16px] mt-5">Amount to Add</label>
           <input id="amount" type="text" class="input rounded-full w-full" placeholder="Add Amount to add"/>
-          <label class="label font-medium text-[#080808] text[16px] mt-5">4 Digit Pin</label>
+          <label class="label font-medium text-[#080808] text[16px] mt-5">Pin Number</label>
           <input id="pin" type="password" class="input rounded-full w-full" placeholder="Enter 4 Digit Pin" maxlength="4" minlength="4" />
-          <button id="addmoneybtn" class="btn btn-primary mt-4 rounded-full">Add Money</button>
+          <button id="addmoneybtn" class="btn btn-primary mt-4 rounded-full text-[20px]">Add Money</button>
         </fieldset>
       </div>
     </div>
-
     </section>
+
+    <section class="cashout w-11/12 mx-auto mt-[15px] pb-[119px]">
+        <h3 class="font-bold">Cash Out</h3>
+        <div class="card bg-base-100 w-full  shrink-0 shadow mt-4 mx-auto rounded-[24px]">
+      <div class="card-body">
+        <fieldset class="fieldset">
+          <label class="label font-medium text-[#080808] text[16px] mt-5">Agent Number</label>
+          <input id="cashoutacountnumber" type="text" class="input rounded-full w-full" placeholder="Enter 11 digit account number" maxlength="11" minlength="11" />
+          <label class="label font-medium text-[#080808] text[16px] mt-5">Amount</label>
+          <input id="cashoutamount" type="text" class="input rounded-full w-full" placeholder="Enter amount to withdraw"/>
+          <label class="label font-medium text-[#080808] text[16px] mt-5">Pin Number</label>
+          <input id="cashoutpin" type="password" class="input rounded-full w-full" placeholder="Enter 4 Digit Pin" maxlength="4" minlength="4" />
+          <button id="cashoutbtn" class="btn btn-primary mt-4 rounded-full text-[20px]">Withdraw Money</button>
+        </fieldset>
+      </div>
+    </div>
+    </section>
+
 </body>
 <script src="scripts/addmoney.js"></script>
+<script src="scripts/cashout.js"></script>
 </html>
