cashout logic is implemented

--- a/homepage.html
+++ b/homepage.html
@@ -38,11 +38,11 @@
    </section>
 
     <section class="headingscontent bg-white rounded-b-2xl">
-   <div class="headingtext w-11/12 mx-auto pt-[32px] bg-white ">
+   <div class="headingtext w-11/12 mx-auto pt-8 bg-white ">
     <h1 class="font-bold text-[24px] mb-4">Welcome to Pay<span class="text-primary">oo</span></h1>
    <p class="text-[16]/[26] font-normal text-neutral-500">Enjoy easy and convenient financial services with us. Cashout charge is low and </p>
    </div>
-    <div class="buttons mt-6 w-11/12 mx-auto grid grid-cols-3 gap-4 pb-[24px]">
+    <div class="buttons mt-6 w-11/12 mx-auto grid grid-cols-3 gap-4 pb-6">
         <button class="btn btn-soft btn-primary flex-col h-full py-5 text-[14px] font-normal"><img src="images/opt-1.png" alt="">Add money</button>
         <button class="btn btn-soft btn-primary flex-col h-full py-5 text-[14px] font-normal"><img src="images/opt-2.png" alt="">Cashout</button>
         <button class="btn btn-soft btn-primary flex-col w-full h-full py-5 text-[14px] font-normal"><img src="images/opt-3.png" alt="">Transfer Money</button>
@@ -51,7 +51,7 @@
         <button class="btn btn-soft btn-primary flex-col h-full py-5 text-[14px] font-normal"><img src="images/opt-6.png" alt="">Transactions</button>
     </section>
     
-    <section class="addmoney w-11/12 mx-auto mt-[15px] pb-[119px] ">
+    <section class="addmoney w-11/12 mx-auto mt-[15px] pb-[119px] hidden">
         <h3 class="font-bold">Add Money</h3>
         <div class="card bg-base-100 w-full  shrink-0 shadow mt-4 mx-auto rounded-[24px]">
       <div class="card-body">
@@ -80,7 +80,7 @@
 
     <section class="cashout w-11/12 mx-auto mt-[15px] pb-[119px]">
         <h3 class="font-bold">Cash Out</h3>
-        <div class="card bg-base-100 w-full  shrink-0 shadow mt-4 mx-auto rounded-[24px]">
+        <div class="card bg-base-100 w-full  shrink-0 shadow mt-4 mx-auto rounded-3xl">
       <div class="card-body">
         <fieldset class="fieldset">
           <label class="label font-medium text-[#080808] text[16px] mt-5">Agent Number</label>
