--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="logo w-[300px] mx-auto pt-[210px]">
         <img src="images/Logo-full.png" alt="">
     </div>
-    <div class="card bg-base-100 w-11/12 shrink-0 shadow mt-[32px] mx-auto rounded-[24px]">
+    <div class="card bg-base-100 w-11/12 shrink-0 shadow mt-8 mx-auto rounded-3xl">
       <div class="card-body">
         <fieldset class="fieldset">
           <label class="label font-medium text-[#080808] text[16px]">Mobile Number</label>
